--- a/src/Post.css
+++ b/src/Post.css
@@ -35,6 +35,11 @@
 .post__image > img {
     width: 100%;
     height: 350px;
+    cursor: pointer;
+}
+
+.post__image > img:hover {
+    opacity: 0.8;
 }
 
 .post__options {
